@@ -516,9 +516,14 @@ __assuan_socketpair (assuan_context_t ctx, int namespace, int style,
 
 
 int
-__assuan_socket (assuan_context_t ctx, int namespace, int style, int protocol)
+__assuan_socket (assuan_context_t ctx, int domain, int type, int proto)
 {
-  return _assuan_sock_new (ctx, namespace, style, protocol);
+  int res;
+
+  res = socket (domain, type, proto);
+  if (res == -1)
+    gpg_err_set_errno (_assuan_sock_wsa2errno (WSAGetLastError ()));
+  return res;
 }
 
 
@@ -526,7 +531,12 @@ int
 __assuan_connect (assuan_context_t ctx, int sock, struct sockaddr *addr,
 		  socklen_t length)
 {
-  return _assuan_sock_connect (ctx, sock, addr, length);
+  int res;
+
+  res = connect (sock, addr, length);
+  if (res < 0)
+    gpg_err_set_errno (_assuan_sock_wsa2errno (WSAGetLastError ()));
+  return res;
 }
 
 
